--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <a href="#" class="logo">COZYKOMIK<span class="logo-dot">.</span></a>
 
         <div class="main-pages">
-            <a href="#">HOME</a>
-            <a href="#">ABOUT</a>
+            <a href="index.html">HOME</a>
+            <a href="#our-team">ABOUT</a>
             <a href="#">COMICS</a>
-            <a href="#">BLOG</a>
-            <a href="#">CONTACT</a>
+            <a href="blog.html">BLOG</a>
+            <a href="contact.html">CONTACT</a>
         </div>
 
         <div class="user-infos">
@@ -142,7 +142,7 @@
             </div>
         </section>
 
-        <section class="our-team">
+        <section id="our-team">
             <p>OUR TEAM</p>
             <h1>Meet With Our Website Artists.</h1>
             <div class="authors">
@@ -192,32 +192,33 @@
             </div>
             <div class="plan-card-collection">
                 <div class="plan-card">
-                    <h1>Plan Name</h1>
+                    <h1>Basic</h1>
                     <img src="">
                     <ul>
-                        <li>Item One</li>
-                        <li>Item Two</li>
-                        <li>Item Three</li>
+                        <li>Access to 500+ books</li>
+                        <li>New books availabe after 30 days</li>
+                        <li>Download upto 10 books</li>
                     </ul>
                     <button class="buy-btn">BUY PLAN</button>
                 </div>
                 <div class="plan-card">
-                    <h1>Plan Name</h1>
+                    <h1>Standard</h1>
+                    <h3 class="most-popular">(Most popular)</h3>
                     <img src="">
                     <ul>
-                        <li>Item One</li>
-                        <li>Item Two</li>
-                        <li>Item Three</li>
+                        <li>Access to entire library</li>
+                        <li>100% Ad-free</li>
+                        <li>Download upto 20 books</li>
                     </ul>
                     <button class="buy-btn">BUY PLAN</button>
                 </div>
                 <div class="plan-card">
-                    <h1>Plan Name</h1>
+                    <h1>Premium</h1>
                     <img src="">
                     <ul>
-                        <li>Item One</li>
-                        <li>Item Two</li>
-                        <li>Item Three</li>
+                        <li>First day access to new comics</li>
+                        <li>Special offers for premium users</li>
+                        <li>Unlimited book downloads</li>
                     </ul>
                     <button class="buy-btn">BUY PLAN</button>
                 </div>
@@ -231,21 +232,21 @@
             </div>
             <div class="news-grid">
                 <div class="news-card">
-                    <img src="https://i.pinimg.com/1200x/02/11/cf/0211cf418f285f44a35ff75b71848d1e.jpg">
+                    <img src="batmanVsSuperman.png">
                     <div class="news-card-right">
                         <p>The Evolution of Superhero Costumes: From Golden Age To Modern Era.</p>
                         </div>
                     </div>
                 </div>
                 <div class="news-card">
-                    <img src="https://i.pinimg.com/1200x/02/11/cf/0211cf418f285f44a35ff75b71848d1e.jpg">
+                    <img src="drStrange.png">
                     <div class="news-card-right">
                         <p>The Evolution of Superhero Costumes: From Golden Age To Modern Era.</p>
                         </div>
                     </div>
                 </div>
                 <div class="news-card">
-                    <img src="https://i.pinimg.com/1200x/02/11/cf/0211cf418f285f44a35ff75b71848d1e.jpg">
+                    <img src="ben10.png">
                     <div class="news-card-right">
                         <p>The Evolution of Superhero Costumes: From Golden Age To Modern Era.</p>
 
