Update COMICS link to point to comic.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main-pages">
             <a href="index.html">HOME</a>
             <a href="#our-team">ABOUT</a>
-            <a href="#">COMICS</a>
+            <a href="comic.html">COMICS</a>
             <a href="blog.html">BLOG</a>
             <a href="contact.html">CONTACT</a>
         </div>
