--- a/comic.html
+++ b/comic.html
@@ -11,11 +11,11 @@
         <a href="#" class="logo">COZYKOMIK<span class="logo-dot">.</span></a>
 
     <div class="main-pages">
-        <a href="./index.html">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">COMICS</a>
-        <a href="#">BLOG</a>
-        <a href="#">CONTACT</a>
+            <a href="index.html">HOME</a>
+            <a href="#our-team">ABOUT</a>
+            <a href="comic.html">COMICS</a>
+            <a href="blog.html">BLOG</a>
+            <a href="contact.html">CONTACT</a>
     </div>
     <div class="user-infos">
             <a href="#"><img src="https://img.icons8.com/?size=100&id=83134&format=png&color=000000" alt="bookmark" class="icon"></a>
