--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,8 @@
 
         <div class="main-pages">
             <a href="index.html">HOME</a>
-            <a href="index.html#our-team">ABOUT</a>
-            <a href="#">COMICS</a>
+            <a href="#our-team">ABOUT</a>
+            <a href="comic.html">COMICS</a>
             <a href="blog.html">BLOG</a>
             <a href="contact.html">CONTACT</a>
         </div>
